--- a/tb.html
+++ b/tb.html
@@ -5,63 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrapbook</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tv.html">TV</a></li>
-            <li><a href="cartoons.html">Cartoons</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="books.html">Books</a></li>
-            <li><a href="music.html">Music</a></li>
-            <li><a href="anime.html">Anime</a></li>
-            <li><a href="tb.html">TB</a></li>
-            <li class="title" style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
-        </ul>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="tv.html">TV</a></li>
+                <li><a href="cartoons.html">CARTOONS</a></li>
+                <li><a href="movies.html">MOVIES</a></li>
+                <li><a href="books.html">BOOKS</a></li>
+                <li><a href="anime.html">ANIME</a></li>
+                <li><a href="tb.html">TB</a></li>
+            </ul>
+        </div>
     </header>
 
+    <main>
     <div class="container">
-        <h1 class="freetext">To be Read</h1>
-        <ol class="tb-list">
-            <li>If we were villains</li>
-            <li>Kingdoms of Smoke</li>
-            <li>The Secret History</li>
-            <li>Raven Cycle 2</li>
-            <li>Vladimir</li>
-            <li>Das Lied des Achill</li>
-            <li>Die Mitternachtsbibliothek</li>
-            <li>Scholomance</li>
-            <li>Malamander</li>
-        </ol>
+        <div class="row">
 
-        <h1 class="freetext">To be Watched</h1>
-        <ol class="tb-list">
-            <li>House of the Dragon</li>
-            <li>Killing Eve</li>
-            <li>Euphoria</li>
-            <li>Noch nie in meinem Leben</li>
-            <li>Girlboss</li>
-            <li>His dark materials</li>
-            <li>In with the devil</li>
-            <li>Derry Girls</li>
-            <li>Legacies</li>
-            <li>A Discovery of Witches</li>
-            <li>Die Erben der Nacht</li>
-            <li>Crashing</li>
-            <li>Die Ringe der Macht</li>
-            <li>Cabinet of Curiosities</li>
-            <li>Kaleidoskop</li>
-            <li>Sweet Home</li>
-            <li>Devil in ohio</li>
-            <li>Inside Job</li>
-            <li>Club der magischen Dinge 2</li>
-            <li>Carmen Sandiego 3 + 4</li>
-            <li>We always lived in the castle</li>
-            <li>The last of us</li>
-            <li>Eyewitness</li>
-        </ol>
+        </div>
     </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>Chess</p>
+        </div>
+    </footer>
 </body>
 </html>
