--- a/anime.html
+++ b/anime.html
@@ -5,25 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrapbook</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tv.html">TV</a></li>
-            <li><a href="cartoons.html">Cartoons</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="books.html">Books</a></li>
-            <li><a href="music.html">Music</a></li>
-            <li><a href="anime.html">Anime</a></li>
-            <li><a href="tb.html">TB</a></li>
-            <li class="title" style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
-        </ul>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="tv.html">TV</a></li>
+                <li><a href="cartoons.html">CARTOONS</a></li>
+                <li><a href="movies.html">MOVIES</a></li>
+                <li><a href="books.html">BOOKS</a></li>
+                <li><a href="anime.html">ANIME</a></li>
+                <li><a href="tb.html">TB</a></li>
+            </ul>
+        </div>
     </header>
 
+    <main>
     <div class="container">
+        <div class="row">
 
+
+        </div>
     </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>Chess</p>
+        </div>
+    </footer>
 </body>
 </html>
