--- a/cartoons.html
+++ b/cartoons.html
@@ -1,141 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrapbook</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
-
 <body>
-    <header id="header">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tv.html">TV</a></li>
-            <li><a href="cartoons.html">Cartoons</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="books.html">Books</a></li>
-            <li><a href="music.html">Music</a></li>
-            <li><a href="anime.html">Anime</a></li>
-            <li><a href="tb.html">TB</a></li>
-            <li class="title" style="float:right"><a class="active" href="about.html">Scrapbook</a></li>
-        </ul>
+    <header>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="tv.html">TV</a></li>
+                <li><a href="cartoons.html">CARTOONS</a></li>
+                <li><a href="movies.html">MOVIES</a></li>
+                <li><a href="books.html">BOOKS</a></li>
+                <li><a href="anime.html">ANIME</a></li>
+                <li><a href="tb.html">TB</a></li>
+            </ul>
+        </div>
     </header>
 
-    <a class="goup" href="#header">
-        ▲
-    </a>
-
-    <ul class="cats">
-        <li><a href="#adult">Adult(ish)</a></li>
-        <li><a href="#weird">Weird</a></li>
-        <li><a href="#family">Family</a></li>
-    </ul>
-
+    <main>
     <div class="container">
-
-        <!-- Cat Adult -->
-        <h1 id="adult" class="cat">Adult(ish)</h1>
         <div class="row">
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons.jpg" alt="Bobs Burgers">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons2.jpg" alt="Futurama">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons5.jpg" alt="Q-Force">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons21.jpg" alt="Arcane">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons4.jpg" alt="Family Guy">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons22.jpg" alt="The Simpsons">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons3.jpg" alt="Rick and Morty">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons29.jpg" alt="American Dad">
-            </div>
-        </div>
 
-        <!-- Cat Weird -->
-        <h1 id="weird" class="cat">Weird</h1>
-        <div class="row">
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons6.jpg" alt="Gravity Falls">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons7.jpg" alt="The Owl House">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons8.jpg" alt="Dead End">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons10.jpg" alt="Star against the forces of evil">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons11.jpg" alt="Over the Garden Wall">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons25.jpg" alt="Amphibia">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons15.jpg" alt="Adventure Time">
-            </div>
-        </div>
 
-        <!-- Cat Family -->
-        <h1 id="family" class="cat">Family</h1>
-        <div class="row">
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons19.jpg" alt="Winx Club">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons18.jpg" alt="Totally Spies">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons27.jpg" alt="Elves">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons16.jpg" alt="Carmen Sandiego">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons9.jpg" alt="Avatar">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons17.jpg" alt="Kim Possible">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons12.jpg" alt="Trollhunters">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons13.jpg" alt="Spongebob">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons26.jpg" alt="Recess">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons20.jpg" alt="Danny Phantom">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons14.jpg" alt="Phineas and Ferb">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons28.jpg" alt="Catscratch">
-            </div>
-            <div class="column" tabindex="0">
-                <img src="images/Cartoons/Cartoons24.jpg" alt="Miraculous">
-            </div>
         </div>
-
     </div>
-</body>
+    </main>
 
+    <footer>
+        <div class="container">
+            <p>Chess</p>
+        </div>
+    </footer>
+</body>
 </html>
